adicionado header e footer

--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/styles/style.css">
-  <title>DEVinBANK</title>
+  <title>[Dev]Bank</title>
 </head>
 <body>
-  
+  <header>
+    <div class="img-container">
+      <img src="/images/logo.PNG" alt="logo DEVinBANK"/>
+    </div>
+  </header>
+  <footer>
+    <div>
+      <span>2022 - [Dev]Bank</span>
+    </div>
+    <div class="anchor-container">
+      <a href="https://github.com/gustavorsan/DEVinPhilips-M1S04-Projeto_Conta_PF" rel="noopener noreferrer">Linkedin</a>
+      <span>&middot;</span>
+      <a href="https://github.com/gustavorsan/DEVinPhilips-M1S04-Projeto_Conta_PF" rel="noopener noreferrer">Facebook</a>
+      <span>&middot;</span>
+      <a href="https://github.com/gustavorsan/DEVinPhilips-M1S04-Projeto_Conta_PF" rel="noopener noreferrer">Twitter</a>
+    </div>
+  </footer>
 </body>
 <script src="/js/script.js"></script>
 </html>
