adicionado form inicial

--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
       <img src="/images/logo.PNG" alt="logo DEVinBANK"/>
     </div>
   </header>
+  <form>
+    <label for="nome">Nome:</label>
+    <input type="text" name="nome" id="nome">
+    <label for="nome">Cpf:</label>
+    <input type="text" name="cpf" id="cpf">
+    <label for="nome">Celular:</label>
+    <input type="text" name="celular" id="celular">
+    <label for="nome">Senha:</label>
+    <input type="password" name="senha" id="senha">
+    <label for="nome">Confirme a Senha:</label>
+    <input type="password" name="senha-c" id="senha-c">
+    <div class="button-container">
+      <input type="submit" name="enviar" id="enviar" value="enviar">
+      <input type="button" name="limpar" id="limpar" value="limpar">
+    </div>
+  </form>
   <footer>
     <div>
       <span>2022 - [Dev]Bank</span>
