Adicionado função de deposito

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
   </form>
   <form id="form_cadastro">
-    <label for="nome">Naome:</label>
+    <label for="nome">Nome:</label>
     <input type="text" name="nome" id="nome">
     <label for="cpf">Cpf:</label>
     <input type="text" name="cpf" id="cpf">
@@ -53,6 +53,7 @@
     </div>
   </form>
   <span id="erro" hidden></span>
+  <span id="dados-conta" hidden></span>
   <footer>
     <div>
       <span>2022 - [Dev]Bank</span>
